[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/BossFight/BossStunAttack.gd" type="Script" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Burst"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.654902, 0, 0.207843 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Slow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 0.654902, 0, 0.207843 ), Color( 1, 0.654902, 0, 0.490196 ), Color( 1, 0.654902, 0, 0.207843 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Warn"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.811765, 1, 0.207843 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="StunAttack" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.200012, -26.1 )
polygon = PoolVector2Array( -3, -74, 57, -61, 152, -36, 174, -16, 187, 4, 190, 25, 167, 39, 110, 63, 35, 79, -48, 75, -129, 56, -179, 30, -184, -14, -124, -46, -59, -65 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0.200012, -26.1 )
color = Color( 1, 0.654902, 0, 0.207843 )
polygon = PoolVector2Array( -185, -16, -141, -43, -74, -62, -3, -72, 109, -64, 184, -41, 205, -9, 196, 20, 158, 43, 74, 56, -19, 66, -112, 55, -206, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Warn"
anims/Burst = SubResource( 3 )
anims/RESET = SubResource( 2 )
anims/Slow = SubResource( 1 )
anims/Warn = SubResource( 4 )

[node name="BurstDelay" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BurstDelay" to="." method="_on_BurstDelay_timeout"]
